[package]
name = "steam-query-cacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caches = "0.2.4"
clap = { version = "4.4.2", features = ["derive"] }
dashmap = "5.5.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["serde"] }
num_enum = "0.7.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
